# Athena

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: nightly-build.yml
app/: build.gradle.kts  proguard-rules.pro
app/playstore/release/: output-metadata.json
app/playstore/release/baselineProfiles/0/: app-playstore-release.dm
app/playstore/release/baselineProfiles/1/: app-playstore-release.dm
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  athena.c  athena.h
app/src/main/cpp/protocols/: icmp.c  tcp.c  udp.c
app/src/main/cpp/session/: ip.c  session.c
app/src/main/cpp/utils/: util.c
app/src/main/go/: build-android.bat  build-android.sh  nflog.go
app/src/main/java/com/kin/athena/: App.kt
app/src/main/res/drawable/: blob.xml  ic_shield.xml  ic_shield_check.xml  ic_shield_off.xml  logo.xml  wrapper.xml
app/src/main/res/layout/: notification_network_speed.xml
app/src/main/res/values/: colors.xml  dimens.xml  donottranslate.xml  strings.xml  themes.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-et/: strings.xml
app/src/main/res/values-hu/: strings.xml
app/src/main/res/values-sk/: strings.xml
app/src/main/res/values-tr/: strings.xml
app/src/main/res/values-v31/: colors.xml
app/src/main/res/xml/: locales_config.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
metadata/en-US/: full_description.txt  short_description.txt  title.txt
metadata/en-US/changelogs/: 1.txt
(+225 files in other folders)
